# mttn

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.nix
.github/workflows/: ci.yml
src/: dump.rs  main.rs  tiny86.rs  trace.rs
test/: Makefile  jumptable.c  seteip.c  smallcall.c  tinysyscall.s
test/log4shell/: Dockerfile  Makefile  README.md
test/log4shell/OpenJDK-i386/: Makefile
test/log4shell/vulnerable-app/: Makefile  run_mttn.sh
test/log4shell/vulnerable-app/java/com/trailofbits/log4shell/: PoC.java
