[package]
name = "mttn"
version = "0.1.0"
authors = ["William Woodruff <william@trailofbits.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger = "0.9"
# TODO(ww): Stabilize once is_string_instruction has landed in a version
iced-x86 = { git = "https://github.com/icedland/iced", rev = "c2944cd" }
jsonl = "4.0.1"
libc = "0.2"
log = "0.4"
nix = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spawn-ptrace = "0.1.2"
