[package]
name = "mttn"
version = "0.1.0"
authors = ["William Woodruff <william@trailofbits.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = "3.1.0"
derivative = "2.2"
env_logger = "0.9"
iced-x86 = "1.16.0"
jsonl = "4.0.1"
libc = "0.2"
log = "0.4"
nix = "0.23.1"
rsprocmaps = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spawn-ptrace = "0.1.2"
